# gif-battle-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/gif_battle_bot/: bot.py  main.py
src/gif_battle_bot/battle/: gif_detector.py  manager.py  models.py  points_manager.py
src/gif_battle_bot/core/: config.py  runtime_config.py
src/gif_battle_bot/storage/: postgres.py
